fix(ui5-textarea): scrollbar visual appearance
Scrollbar should get proper background color and should not overlay bottom border

Fixes #7649

--- a/packages/main/src/themes/base/TextArea-parameters.css
+++ b/packages/main/src/themes/base/TextArea-parameters.css
@@ -30,7 +30,7 @@
 	--_ui5_textarea_padding_top: 0.4375rem;
 	--_ui5_textarea_padding_bottom: 0.4375rem;
 	--_ui5_textarea_padding_top_readonly: 0.4375rem;
-	--_ui5_textarea_padding_bottom_readonly:0.4375rem;
+    --_ui5_textarea_padding_bottom_readonly: 0.4375rem;
 	--_ui5_textarea_padding_top_error_warning: 0.375rem;
 	--_ui5_textarea_padding_bottom_error_warning: 0.375rem;
 	--_ui5_textarea_padding_top_information: 0.375rem;
@@ -38,6 +38,30 @@
 	--_ui5_textarea_margin: 0.25rem 0;
 	--_ui5_textarea_exceeded_text_height: 1rem;
 	--_ui5_textarea_readonly_border_style: var(--sapField_BorderStyle);
+    --_ui5_textarea_scrollbar_None_box_shadow: inset 0 0.0625rem 0 0
+            rgba(85, 107, 129, 0.25),
+        inset 0 -0.0625rem 0 0 rgba(85, 107, 129, 0.25),
+        inset -0.0625rem 0 0 0 rgba(85, 107, 129, 0.25);
+    --_ui5_textarea_scrollbar_None_box_shadow_hover: inset 0 0.0625rem 0 0
+            rgba(79, 160, 255, 0.5),
+        inset 0 -0.0625rem 0 0 rgba(79, 160, 255, 0.5),
+        inset -0.0625rem 0 0 0 rgba(79, 160, 255, 0.5);
+    --_ui5_textarea_scrollbar_Error_box_shadow: inset 0 0.0625rem 0 0
+            rgba(255, 142, 196, 0.45),
+        inset 0 -0.0625rem 0 0 rgba(255, 142, 196, 0.45),
+        inset -0.0625rem 0 0 0 rgba(255, 142, 196, 0.45);
+    --_ui5_textarea_scrollbar_Warning_box_shadow: inset 0 0.0625rem 0 0
+            rgba(255, 213, 10, 0.4),
+        inset 0 -0.0625rem 0 0 rgba(255, 213, 10, 0.4),
+        inset -0.0625rem 0 0 0 rgba(255, 213, 10, 0.4);
+    --_ui5_textarea_scrollbar_Information_box_shadow: inset 0 0.0625rem 0 0
+            rgba(104, 174, 255, 0.5),
+        inset 0 -0.0625rem 0 0 rgba(104, 174, 255, 0.5),
+        inset -0.0625rem 0 0 0 rgba(104, 174, 255, 0.5);
+    --_ui5_textarea_scrollbar_Success_box_shadow: inset 0 0.0625rem 0 0
+            rgba(48, 145, 76, 0.18),
+        inset 0 -0.0625rem 0 0 rgba(48, 145, 76, 0.18),
+        inset -0.0625rem 0 0 0 rgba(48, 145, 76, 0.18);
 }
 
 [data-ui5-compact-size],
